--- a/html/mrc3timezones.html
+++ b/html/mrc3timezones.html
@@ -20,29 +20,16 @@
     <body>
         <div id="bg">
             <div class="text-box flex-container unselectable">
-                <div>
-                    (Note: Reload the page to refresh the text boxes!)
-                </div>
+                <div id="date1"></div>
             </div>
             <div class="text-box flex-container unselectable">
-                <div id="date1">
-                    This text should be replaced by the js. If you're seeing this, it means that my code is broken :(
-                </div>
+                <div id="date2"></div>
             </div>
             <div class="text-box flex-container unselectable">
-                <div id="date2">
-                    This text should be replaced by the js. If you're seeing this, it means that my code is broken :(
-                </div>
-            </div>
-            <div class="text-box flex-container unselectable">
-                <div id="date3">
-                    This text should be replaced by the js. If you're seeing this, it means that my code is broken :(
-                </div>
+                <div id="date3"></div>
             </div>
             <!--<div class="text-box flex-container unselectable">
-                <div id="date4">
-                    This text should be replaced by the js. If you're seeing this, it means that my code is broken :(
-                </div>
+                <div id="date4"></div>
             </div>-->
             <div class="text-box flex-container unselectable">
                 <div>
@@ -50,6 +37,6 @@
                 </div>
             </div>
             <script src="/js/timezonething.js" type=text/javascript></script>
-            <script src="/js/scrollparallax.js" type=text/javascript></script>
+            <script src="js/scrollparallax.js" type=text/javascript></script>
     </body>
 </html>
