--- a/redirects/notitg-furry-sheets.html
+++ b/redirects/notitg-furry-sheets.html
@@ -5,8 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="keywords" content="Spax, SpiritAxolotl, spiritaxolotl, spirit, axolotl, axolotls, youtube">
-        <meta property="og:title" content="Spax's Site">
-        <meta property="og:description" content="redirect">
+        <meta property="og:title" content="Redirect to NotITG furry survey results">
+        <meta property="og:description" content="I am so cool">
         <meta property="og:type" content="website">
         <meta name="og:image" itemprop="image" content="https://spiritaxolotl.github.io/images/faces/spax/Smirk.png" type="image/png">
         <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
