--- a/404.html
+++ b/404.html
@@ -5,19 +5,16 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="keywords" content="Spax, SpiritAxolotl, spiritaxolotl, spirit, axolotl, axolotls, youtube">
-        <meta property="og:title" content="Redirect to NotITG furry survey results">
-        <meta property="og:description" content="I am so cool">
+        <meta property="og:title" content="That page doesn't exist!">
+        <meta property="og:description" content="How did we get here?">
         <meta property="og:type" content="website">
-        <meta name="og:image" itemprop="image" content="https://spiritaxolotl.github.io/images/faces/spax/Smirk.png" type="image/png">
-        <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
+        <meta name="og:image" itemprop="image" content="https://spiritaxolotl.github.io/images/faces/claire/Dizzy.png" type="image/png">
+        <link rel="icon" href="https://spiritaxolotl.github.io/images/icons/Smirk_Circle.png"></link>
         <!--phucking bootstrap-->
-        <link rel="stylesheet" href="../css/bootstrap.min.css">
-        <script src="../js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="https://spiritaxolotl.github.io/css/bootstrap.min.css">
+        <script src="https://spiritaxolotl.github.io/js/bootstrap.min.js"></script>
         <!---->
-        <link rel="stylesheet" href="css/styles.css" type=text/css>
-        <link rel="canonical" href="https://docs.google.com/spreadsheets/d/1c2h3gOhC5Xz6-GcSJR8XJhRSJhzdvhicqebza4h73NY/edit?usp=sharing"/>
-        <meta http-equiv="Refresh" content="0; url='html/main'"/>
-        <title>Redirect Go brrrrr</title>
+        <title>404 NOT FOUND LOL!</title>
     </head>
     <body>
         <div id="bg">
