nvm, NOW css is fixed

--- a/404.html
+++ b/404.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="https://spiritaxolotl.github.io/css/bootstrap.min.css">
         <script src="https://spiritaxolotl.github.io/js/bootstrap.min.js"></script>
         <!---->
+        <link rel="stylesheet" href="https://spiritaxolotl.github.io/css/styles.css">
         <title>404 NOT FOUND LOL!</title>
     </head>
     <body>
