--- a/redirects/notitg-furry-sheets.html
+++ b/redirects/notitg-furry-sheets.html
@@ -15,8 +15,8 @@
         <script src="../js/bootstrap.min.js"></script>
         <!---->
         <link rel="stylesheet" href="css/styles.css" type=text/css>
-        <link rel="canonical" href="https://docs.google.com/spreadsheets/d/1c2h3gOhC5Xz6-GcSJR8XJhRSJhzdvhicqebza4h73NY/edit?usp=sharing"/>
-        <meta http-equiv="Refresh" content="0; url='html/main'"/>
+        <link rel="canonical" href="notitg-furry-sheets"/>
+        <meta http-equiv="Refresh" content="0; url='https://docs.google.com/spreadsheets/d/1c2h3gOhC5Xz6-GcSJR8XJhRSJhzdvhicqebza4h73NY/edit?usp=sharing'"/>
         <title>Redirect Go brrrrr</title>
     </head>
     <body>
