--- a/html/spaxDay.html
+++ b/html/spaxDay.html
@@ -407,7 +407,7 @@ By CalmBubbles :)
                 <div id="textBox"></div>
             </div>
             
-            <button onclick="incIndex();" style="position:relative; width:100%; height:250px;">NEXT</button>
+            <!--<button onclick="incIndex();" style="position:relative; width:100%; height:250px;">NEXT</button>-->
         </div>
         
         <script>
