--- a/html/spaxDay.html
+++ b/html/spaxDay.html
@@ -457,10 +457,10 @@ By CalmBubbles :)
                     });
                 }, 1000);
                 
-                let btn = document.querySelector("button");
+                /*let btn = document.querySelector("button");
                 setInterval(function () {
                     btn.innerHTML = bgm.volume;
-                }, 2);
+                }, 2);*/
             }
             
             function incIndex ()
