added a small note for the controls

--- a/html/spaxDay.html
+++ b/html/spaxDay.html
@@ -6,6 +6,8 @@ Next Update : Spax's Birthday
 
 By CalmBubbles :)
 
+haha now it's edited by spax :)
+
 -->
 
 <!DOCTYPE HTML>
@@ -396,7 +398,7 @@ By CalmBubbles :)
                     let tip = document.querySelector("#tip");
                     let tipText = tip.querySelector("div");
                     
-                    tipText.innerHTML = "Interact with the page";
+                    tipText.innerHTML = "Interact with the page<br>(press Z to progress the text)";
                     </script>
 
                     <noscript>This page requires JavaScript to work</noscript>
