fixed bad comments whoops

--- a/html/spaxDay.html
+++ b/html/spaxDay.html
@@ -1,6 +1,6 @@
 <!--
 
-Version : 1.02
+Version : 1.03.2
 Description : I hate working with audio
 Next Update : Spax's Birthday
 
@@ -520,7 +520,7 @@ haha now it's edited by spax :)
                     }, 125);
                 }
             }
-            <!--holy fuck calm you literally made a whole-ass dialogue system-->
+            // holy fuck calm you literally made a whole-ass dialogue system-
             function runDia (dialogueCode)
             {
                 diaNextValid = false;
@@ -1066,7 +1066,7 @@ haha now it's edited by spax :)
                                             resetBoxTo("Here's a gift, it took a lot ");
                                             typeOnBox("of effort to make.", 1, "zera", "Neutral", function () {
                                                 runScene(4);
-                                                <!--WOWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWW>
+                                                //WOWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWW
                                             });
                                         });
                                     });
