oopsie doopsie fixed a fatal error

--- a/html/spaxDay.html
+++ b/html/spaxDay.html
@@ -1,6 +1,6 @@
 <!--
 
-Version : 1.03.6
+Version : 1.03.7
 Description : I hate working with audio
 Next Update : Spax's Birthday
 
@@ -1031,7 +1031,7 @@ haha now it's edited by spax :)
                         setTimeout(function () {
                             madeTextBox.setAttribute("data-disabled", "false");
                             madeTextBox.style.animation = "none";
-                            madeTextInBox.innerHTML = "(<a href="/html/main">Click here</a> to go back to the main page!)";
+                            madeTextInBox.innerHTML = '(<a href="/html/main">Click here</a> to go back to the main page!)';
                         }, 125);
                         
                         setTimeout(function () {
