--- a/html/spaxDay.html
+++ b/html/spaxDay.html
@@ -1,6 +1,6 @@
 <!--
 
-Version : 1.03.7
+Version : 1.03.8
 Description : I hate working with audio
 Next Update : Spax's Birthday
 
@@ -1182,8 +1182,8 @@ haha now it's edited by spax :)
                 // bgm.volume = bgm.volume / 2;
                 
                 var interval = setInterval(function () {
-                    var textSnd = new Audio(sndSrc);
-                    textSnd.volume = 0.75;
+                    /*var textSnd = new Audio(sndSrc);
+                    textSnd.volume = 0.75;*/
                     
                     if (index < text.length)
                     {
