--- a/html/spaxDay.html
+++ b/html/spaxDay.html
@@ -1,6 +1,6 @@
 <!--
 Version : 1.03.10
-Description : I hate working with audio
+Description : I hate working with audio, also I love eating spaghetti code with a twist of headache
 Next Update : Spax's Birthday
 By CalmBubbles :)
 haha now it's edited by spax :)
