--- a/html/fanart.html
+++ b/html/fanart.html
@@ -1,6 +1,8 @@
 <!DOCTYPE HTML>
 <html>
     <head>
+        <link rel="preload" href="/data/fanart.json" as="fetch">
+        
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
