--- a/html/spaxDay.html
+++ b/html/spaxDay.html
@@ -500,6 +500,7 @@ haha now it's edited by spax :)
                 }
                 else
                 {
+                    SpecialBox = null;
                     diaIsActive = false;
                     
                     textBox.innerHTML = "";
