--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
         <meta property="og:title" content="That page doesn't exist!">
         <meta property="og:description" content="How did we get here?">
         <meta property="og:type" content="website">
-        <meta name="og:image" itemprop="image" content="https://spiritaxolotl.github.io/images/faces/claire/Dizzy.png" type="image/png">
+        <meta property="og:image" content="https://spiritaxolotl.github.io/images/faces/claire/Dizzy.png" type="image/png">
         <link rel="icon" href="https://spiritaxolotl.github.io/images/icons/Smirk_Circle.png"></link>
         <!--phucking bootstrap-->
         <link rel="stylesheet" href="https://spiritaxolotl.github.io/css/bootstrap.min.css">
