--- a/html/fanart.html
+++ b/html/fanart.html
@@ -10,7 +10,7 @@
         <meta property="og:title" content="Spax Fanart">
         <meta property="og:description" content="A collection of all fanworks of my chracter, &quot;Spax&quot;.">
         <meta property="og:type" content="website">
-        <meta name="og:image" itemprop="image" content="https://spiritaxolotl.github.io/images/faces/spax/Smirk.png" type="image/png">
+        <meta property="og:image" content="https://spiritaxolotl.github.io/images/faces/spax/Smirk.png" type="image/png">
         <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
         <!--phucking bootstrap-->
         <link rel="stylesheet" href="/css/bootstrap.min.css">
