--- a/html/mrc3timezones.html
+++ b/html/mrc3timezones.html
@@ -7,7 +7,7 @@
         <meta property="og:title" content="Mods Rush Couples 3 Splixel Timezones">
         <meta property="og:description" content="The timezones of the team members of SpiritAxolotl, Pentaxel, and Splittikin">
         <meta property="og:type" content="website">
-        <meta name="og:image" itemprop="image" content="https://spiritaxolotl.github.io/images/faces/spax/Smirk.png" type="image/png">
+        <meta property="og:image" content="https://spiritaxolotl.github.io/images/faces/spax/Smirk.png" type="image/png">
         <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
         <!--phucking bootstrap-->
         <link rel="stylesheet" href="/css/bootstrap.min.css">
