--- a/html/rangalshutthehellup.html
+++ b/html/rangalshutthehellup.html
@@ -7,7 +7,7 @@
         <meta property="og:title" content="Rangal Shut The Hell Up">
         <meta property="og:description" content="A site for when you need rangal to just phucking shut up.">
         <meta property="og:type" content="website">
-        <meta name="og:image" itemprop="image" content="https://spiritaxolotl.github.io/images/faces/spax/Smirk.png" type="image/png">
+        <meta property="og:image" content="https://spiritaxolotl.github.io/images/faces/spax/Smirk.png" type="image/png">
         <link rel="icon" href="/images/faces/claire/Mad.png"></link>
         <title>SHUR UP RANGAK</title>
         <!--NOTE: Those typos are on purpose. I know it's supposed to say "SHUT UP RANGAL" but the typos are funnier imo-->
