--- a/html/spaxDay.html
+++ b/html/spaxDay.html
@@ -57,7 +57,7 @@ haha now it's edited by spax :)
         <meta property="og:title" content="Spax Day">
         <meta property="og:description" content="Happy birthday Spax">
         <meta property="og:type" content="website">
-        <meta name="og:image" itemprop="image" content="https://calmbubbles.github.io/zerasGift/img/giftBox.png" type="image/png">
+        <meta property="og:image" content="https://calmbubbles.github.io/zerasGift/img/giftBox.png" type="image/png">
         <link rel="icon" href="https://calmbubbles.github.io/zerasGift/img/giftBox.png">
         
         <link rel="stylesheet" href="/css/bootstrap.min.css">
