--- a/html/spaxARG.html
+++ b/html/spaxARG.html
@@ -9,7 +9,7 @@
         <meta property="og:title" content="Spax ARG">
         <meta property="og:description" content="">
         <meta property="og:type" content="website">
-        <meta name="og:image" itemprop="image" content="https://spiritaxolotl.github.io/images/faces/spax/Smirk.png" type="image/png">
+        <meta property="og:image" content="https://spiritaxolotl.github.io/images/faces/spax/Smirk.png" type="image/png">
         <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
         <!--phucking bootstrap-->
         <link rel="stylesheet" href="/css/bootstrap.min.css">
