--- a/redirects/notitg-furry-sheets.html
+++ b/redirects/notitg-furry-sheets.html
@@ -8,7 +8,7 @@
         <meta property="og:title" content="Redirect to NotITG furry survey results">
         <meta property="og:description" content="I am so cool">
         <meta property="og:type" content="website">
-        <meta name="og:image" itemprop="image" content="https://spiritaxolotl.github.io/images/faces/spax/Smirk.png" type="image/png">
+        <meta property="og:image" content="https://spiritaxolotl.github.io/images/faces/spax/Smirk.png" type="image/png">
         <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
         <!--phucking bootstrap-->
         <link rel="stylesheet" href="../css/bootstrap.min.css">
