--- a/redirects/imsorry.html
+++ b/redirects/imsorry.html
@@ -7,11 +7,11 @@
         <meta property="og:type" content="website">
         <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
         <!--phucking bootstrap-->
-        <link rel="stylesheet" href="../css/bootstrap.min.css">
+        <link rel="stylesheet" href="/css/bootstrap.min.css">
         <script src="../js/bootstrap.min.js"></script>
         <!---->
-        <link rel="stylesheet" href="css/styles.css" type=text/css>
-        <link rel="canonical" href="notitg-furry-sheets"/>
+        <link rel="stylesheet" href="/css/styles.css" type=text/css>
+        <link rel="canonical" href="imsorry"/>
         <meta http-equiv="Refresh" content="0; url='https://www.youtube.com/watch?v=dQw4w9WgXcQ'"/>
         <title>Redirect Go brrrrr</title>
     </head>
