--- a/redirects/imsorry.html
+++ b/redirects/imsorry.html
@@ -7,10 +7,10 @@
         <meta property="og:type" content="website">
         <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
         <!--phucking bootstrap-->
-        <link rel="stylesheet" href="/css/bootstrap.min.css">
-        <script src="../js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="https://spiritaxolotl.github.io/css/bootstrap.min.css">
+        <script src="https://spiritaxolotl.github.io/js/bootstrap.min.js"></script>
         <!---->
-        <link rel="stylesheet" href="/css/styles.css" type=text/css>
+        <link rel="stylesheet" href="https://spiritaxolotl.github.io/css/styles.css" type=text/css>
         <link rel="canonical" href="imsorry"/>
         <meta http-equiv="Refresh" content="0; url='https://www.youtube.com/watch?v=dQw4w9WgXcQ'"/>
         <title>Redirect Go brrrrr</title>
