--- a/html/fanart.html
+++ b/html/fanart.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <link rel="preload" href="/data/fanart.json" as="fetch">
+        <link rel="preload" href="/data/fanart.json" as="fetch" crossorigin="anonymous">
         
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
