added new dialogue

--- a/html/fanart.html
+++ b/html/fanart.html
@@ -27,7 +27,25 @@
                         <img src="
                     /images/faces/spax/Smirk.png
                         "></img>
-                    Yo! This is all the fanart that you guys made of my character!
+                    Yo! This is all the fanart that you guys made of my characters!
+                </div>
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                        <img src="
+                    /images/faces/spax/Look.png
+                        "></img>
+                    (And just art of my characters in general.)
+                </div>
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                        <img src="
+                    /images/faces/spax/Smirk.png
+                        "></img>
+                    Here's the character information:<br>
+                The blue anthro axolotl gal is my work-in-progress OC, Nahua!<br>
+                And the small blue normal axolotl is Spax, a representation of me as a person on the internet.
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
@@ -35,7 +53,7 @@
                         <img src="
                     /images/faces/spax/Blush.png
                         "></img>
-                    I hope you enjoy it!
+                    Well, I hope you enjoy the art!
                 </div>
             </div>
         </div>
