--- a/html/fanart.html
+++ b/html/fanart.html
@@ -27,7 +27,7 @@
                         <img src="
                     /images/faces/spax/Smirk.png
                         "></img>
-                    Yo! This is all the fanart that you guys made of my characters!
+                    Yo! This page hosts all the fanart that you guys made of my characters!
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
