Funny Arrow Animation for Text Boxes
Hi, Ari Here.

Explanation: (Which you may or may not need)

- I made a new class <.arrow>. I set its position: absolute so I could use "top" and "left" in tandem with "transform" to center the arrow at the bottom of the text box. However...

- The "text-box" class (the parent of (.arrow)) needed to have its position set otherwise the <.arrow> class would've fixed itself to the parent that DID have it's position set. In this case it was #bg.

- In the <.arrow> class, I got rid of the margin as the "next_arrow" image didn't need it.

(I saw that the margin was for spacing the face image from the text.)

Sidenotes:
- You should be able to copy and paste the arrow in the text boxes where you want it.

- I only tested this on a desktop setting. I have no idea if it works on other devices.

- I hope y'all are fine with css animations. Idk if you have plans for js or other types of animation.

--- a/html/main.html
+++ b/html/main.html
@@ -32,6 +32,11 @@
                     /images/faces/claire/Neutral.png
                         "></img>
                     Hey nerds. It's me, Claire.
+                        <!-- Funny Arrow Animation Thing -->
+                        <img class="arrow" src="
+                    /images/misc/next_arrow/next_arrow.png
+                        "></img>
+                    
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
