--- a/html/fanart.html
+++ b/html/fanart.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="keywords" content="Spax, SpiritAxolotl, spiritaxolotl, spirit, axolotl, axolotls, youtube">
         <meta property="og:title" content="Spax Fanart">
-        <meta property="og:description" content="A collection of all official/fanworks of my chracters &quot;Spax&quot; and &quot;Nahua&quot;.">
+        <meta property="og:description" content="A collection of all official/fanworks of my characters &quot;Spax&quot; and &quot;Nahua&quot;.">
         <meta property="og:type" content="website">
         <meta property="og:image" content="https://spiritaxolotl.github.io/images/faces/spax/Smirk.png" type="image/png">
         <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
