--- a/redirects/portal.html
+++ b/redirects/portal.html
@@ -12,7 +12,7 @@
         <!---->
         <link rel="stylesheet" href="https://spiritaxolotl.github.io/css/styles.css" type=text/css>
         <link rel="canonical" href="portal"/>
-        <meta http-equiv="Refresh" content="0; url='.gg/xbmJZptFXC'"/>
+        <meta http-equiv="Refresh" content="0; url='https://.gg/xbmJZptFXC'"/>
         <title>hmmmmmmmmmm</title>
     </head>
     <body>
